# whisper-writer

./: .gitignore  CHANGELOG.md  README.md  cspell.config.yaml  pyproject.toml  run.py
.config/: cspell-whisper-writer-dictionary.txt
