[project]
name = "whisper-writer"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Joel Van Eenwyk", email = "joel.vaneenwyk@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "aiohttp",
    "aiosignal",
    "annotated-types",
    "anyio",
    "async-timeout",
    "attrs",
    "audioplayer",
    "av",
    "certifi",
    "cffi",
    "charset-normalizer",
    "colorama",
    "coloredlogs",
    "ctranslate2",
    "distro",
    "EasyProcess",
    "entrypoint2",
    "faster-whisper",
    "ffmpeg-python",
    "filelock",
    "flatbuffers",
    "frozenlist",
    "fsspec",
    "future",
    "h11",
    "httpcore",
    "httpx",
    "huggingface-hub",
    "humanfriendly",
    "idna",
    "Jinja2",
    "llvmlite",
    "MarkupSafe",
    "more-itertools",
    "MouseInfo",
    "mpmath",
    "mss",
    "multidict",
    "networkx",
    "numba",
    "numpy",
    "onnxruntime",
    "openai",
    "packaging",
    "Pillow",
    "protobuf",
    "pycparser",
    "pydantic",
    "pydantic_core",
    "PyGetWindow",
    "PyMsgBox",
    "pynput",
    "pyperclip",
    "PyQt5",
    "PyQt5-Qt5",
    "PyQt5-sip",
    "pyreadline3",
    "PyRect",
    "pyscreenshot",
    "PyScreeze",
    "python-dotenv",
    "pytweening",
    "PyYAML",
    "regex",
    "requests",
    "six",
    "sniffio",
    "sounddevice",
    "sympy",
    "tiktoken",
    "tokenizers",
    "torch",
    "tqdm",
    "typing_extensions",
    "urllib3",
    "yarl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ruff",
    "uv>=0.2.5",
]
[tool.rye.scripts]
ui = { cmd = "python run.py" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_writer"]
